# s3ui

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: build-macos.yml  ci.yml  nightly.yml  publish.yml  release.yml
docs/design/: implementation-plan.md  spec.md
src/s3ui/: app.py  constants.py  logging_setup.py  main_window.py
src/s3ui/core/: cost.py  credentials.py  download_worker.py  errors.py  listing_cache.py  s3_client.py  stats.py  transfers.py  upload_worker.py
src/s3ui/db/: database.py
src/s3ui/db/migrations/: 001_initial.sql
src/s3ui/models/: s3_objects.py  transfer_model.py
src/s3ui/ui/: breadcrumb_bar.py  confirm_delete.py  cost_dialog.py  get_info.py  local_pane.py  name_conflict.py  s3_pane.py  settings_dialog.py  setup_wizard.py  stats_dialog.py  transfer_panel.py
tests/: conftest.py  test_app.py  test_cost.py  test_credentials.py  test_db.py  test_download_worker.py  test_listing_cache.py  test_local_pane.py  test_models.py  test_phase10_11.py  test_s3_client.py  test_s3_pane.py  test_setup_wizard.py  test_stats_cost.py  test_transfer_model.py  test_transfers.py  test_upload_worker.py
