[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3ui"
dynamic = ["version"]
description = "A native file manager for Amazon S3"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "S3UI Contributors" },
]
keywords = ["s3", "aws", "file-manager", "pyqt6", "desktop"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: System :: Archiving",
]
dependencies = [
    "PyQt6>=6.5",
    "boto3>=1.28",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "moto[s3]>=4.0",
    "ruff>=0.1",
    "pyinstaller>=6.0",
]

[project.scripts]
s3ui = "s3ui.app:main"

[project.urls]
Homepage = "https://github.com/OWNER/s3ui"
Documentation = "https://github.com/OWNER/s3ui/tree/main/docs"
Repository = "https://github.com/OWNER/s3ui"
Issues = "https://github.com/OWNER/s3ui/issues"

[tool.hatch.version]
path = "src/s3ui/__init__.py"

[tool.hatch.build.targets.sdist]
include = ["src/s3ui"]

[tool.hatch.build.targets.wheel]
packages = ["src/s3ui"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyqt6"
